# DANSR

./: README.md
example/example_results/: result.example.all.clusters.tsv  result.example.annotated.rejected.tsv  result.example.annotated.smallRNAs.close.proximity.tsv  result.example.annotated.smallRNAs.tsv  result.example.unannotated.rejected.tsv  result.example.unannotated.smallRNAs.tsv  result.sample.all.clusters.tsv  result.sample.annotated.others.tsv  result.sample.annotated.smallRNAs.close.proximity.tsv  result.sample.annotated.smallRNAs.tsv  result.sample.unannotated.other.tsv  result.sample.unannotated.smallRNAs.tsv
src/: assign_best_annotation.py  bedToGraph  bed_split_and_merge.py  call_clusters.py  dansr  dansr.py  filter_bed.py  filter_result.py  filter_result_bed.py  filter_sam_by_cigar.py  filter_sam_by_sigar.py  get_novel.py  merge_clusters.py  runBWA.py  runCutadapt.py  sam_split.py  sam_to_bed.py  setup.py  setup.small.ini  sigars_allow.txt  small.py  small.py~  update_boundary.py  update_boundary_2.py
src/BedtoGraphCode/src/: ALGraph.cpp  AlignmentClusters.cpp  AlignmentClusters.cpp~  AlignmentClusters.h  Alignments.cpp  Alignments.cpp~  Alignments.h  BedToGraph.cpp  BedToGraph.cpp~  BedToGraph.h  CMakeLists.txt  ClusterGraph.cpp  ClusterGraph.h  Clusters.cpp  Clusters.cpp~  Clusters.h  Gene3.cpp  Gene3.cpp~  Gene3.cpp~.orig  Gene3.h  Gene3.h~  Groups.cpp  Groups.h  MyTypes.h  ReadAlignments.cpp  ReadAlignments.cpp~  ReadAlignments.h  Utils.cpp  Utils.h  main.cpp  main.cpp~
